--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,17 +17,28 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:maxHeight="200dp"
-            android:layout_weight="4"
+            android:layout_weight="5"
             android:hint="@string/input_message"
             android:fontFamily="@string/font_mono"
             android:inputType="textNoSuggestions|textMultiLine" />
 
-        <Button
+
+        <TextView
             android:id="@+id/send_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/jot_down" />
+            android:paddingLeft="3dp"
+            android:paddingRight="3dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:layout_marginRight="4dp"
+            android:background="@color/colorAccent"
+            android:foreground="?attr/selectableItemBackground"
+            android:textColor="@color/white"
+            android:text="@string/jot_down"
+            android:textSize="18sp"
+            android:gravity="center"/>
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
