--- a/app/src/main/res/layout/recyclerview_message.xml
+++ b/app/src/main/res/layout/recyclerview_message.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="10dp"
-    android:foreground="?android:attr/selectableItemBackground">
+    android:background="?android:attr/selectableItemBackground">
 
     <TextView
         android:id="@+id/text_message_main"
